# api

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.example.yml  pyproject.toml  run.sh
.github/workflows/: ci.yml
app/: config.py  logging_config.py  main.py  middleware.py
app/api/v1/: router.py
app/api/v1/endpoints/: errors.py  items.py
tests/: test_main.py
